Hovering over the red points on panic.com/transmit is a good way to reproduce the crash #0 0x00007ffff4fa0734 in QScopedPointer<QObjectData, QScopedPointerDeleter<QObjectData> >::data (this=0x8) at ../../include/QtCore/../../../qt/src/corelib/tools/qscopedpointer.h:135 #1 0x00007ffff57abd16 in qGetPtrHelper<QScopedPointer<QObjectData, QScopedPointerDeleter<QObjectData> > > (p=...) at ../../include/QtCore/../../../qt/src/corelib/global/qglobal.h:2337 #2 0x00007ffff57ac408 in QGraphicsScene::d_func (this=0x0) at /home/kenneth/repo/Qt/qt/src/gui/graphicsview/qgraphicsscene.h:297 #3 0x00007ffff57d2d15 in QGraphicsScene::update (this=0x0, rect=...) at /home/kenneth/repo/Qt/qt/src/gui/graphicsview/qgraphicsscene.cpp:3205 #4 0x00007ffff74e451d in WebCore::OpacityAnimationQt::applyFrame(double const&, double const&, double) () from /home/kenneth/repo/Qt/WebKitBuild/Release/bin/../lib/libQtWebKit.so.4 #5 0x00007ffff74e49c5 in WebCore::AnimationQt<double>::updateCurrentTime(int) () from /home/kenneth/repo/Qt/WebKitBuild/Release/bin/../lib/libQtWebKit.so.4 #6 0x00007ffff4861747 in QAbstractAnimation::setCurrentTime (this=0xc55f40, msecs=16) at /home/kenneth/repo/Qt/qt/src/corelib/animation/qabstractanimation.cpp:739 #7 0x00007ffff4860302 in QUnifiedTimer::updateAnimationsTime (this=0x973e80) at /home/kenneth/repo/Qt/qt/src/corelib/animation/qabstractanimation.cpp:223 #8 0x00007ffff4860661 in QUnifiedTimer::timerEvent (this=0x973e80, event=0x7fffffffda10) at /home/kenneth/repo/Qt/qt/src/corelib/animation/qabstractanimation.cpp:279 #9 0x00007ffff49d87a1 in QObject::event (this=0x973e80, e=0x7fffffffda10) at /home/kenneth/repo/Qt/qt/src/corelib/kernel/qobject.cpp:1175 #10 0x00007ffff4fb13f8 in QApplicationPrivate::notify_helper (this=0x7040f0, receiver=0x973e80, e=0x7fffffffda10) at /home/kenneth/repo/Qt/qt/src/gui/kernel/qapplication.cpp:4358 #11 0x00007ffff4fae90f in QApplication::notify (this=0x7fffffffdeb0, receiver=0x973e80, e=0x7fffffffda10) at /home/kenneth/repo/Qt/qt/src/gui/kernel/qapplication.cpp:3762 #12 0x00007ffff49bd3d8 in QCoreApplication::notifyInternal (this=0x7fffffffdeb0, receiver=0x973e80, event=0x7fffffffda10) at /home/kenneth/repo/Qt/qt/src/corelib/kernel/qcoreapplication.cpp:732 #13 0x00007ffff4f9fb85 in QCoreApplication::sendEvent (receiver=0x973e80, event=0x7fffffffda10) at ../../include/QtCore/../../../qt/src/corelib/kernel/qcoreapplication.h:215 #14 0x00007ffff4a0019d in QTimerInfoList::activateTimers (this=0x711980) at /home/kenneth/repo/Qt/qt/src/corelib/kernel/qeventdispatcher_unix.cpp:602 #15 0x00007ffff49fb2ab in timerSourceDispatch (source=0x711920) at /home/kenneth/repo/Qt/qt/src/corelib/kernel/qeventdispatcher_glib.cpp:184 #16 0x00007ffff49fb392 in idleTimerSourceDispatch (source=0x7119e0) at /home/kenneth/repo/Qt/qt/src/corelib/kernel/qeventdispatcher_glib.cpp:231 #17 0x00007ffff2a0f87a in g_main_dispatch (context=0x70fe10) at gmain.c:1960 #18 IA__g_main_context_dispatch (context=0x70fe10) at gmain.c:2513 #19 0x00007ffff2a13208 in g_main_context_iterate (context=0x70fe10, block=1, dispatch=1, self=<value optimized out>) at gmain.c:2591 #20 0x00007ffff2a133cc in IA__g_main_context_iteration (context=0x70fe10, may_block=1) at gmain.c:2654 #21 0x00007ffff49fc743 in QEventDispatcherGlib::processEvents (this=0x70de30, flags=...) at /home/kenneth/repo/Qt/qt/src/corelib/kernel/qeventdispatcher_glib.cpp:412 #22 0x00007ffff509e6f0 in QGuiEventDispatcherGlib::processEvents (this=0x70de30, flags=...) at /home/kenneth/repo/Qt/qt/src/gui/kernel/qguieventdispatcher_glib.cpp:204 #23 0x00007ffff49ba3d0 in QEventLoop::processEvents (this=0x7fffffffdde0, flags=...) at /home/kenneth/repo/Qt/qt/src/corelib/kernel/qeventloop.cpp:149 #24 0x00007ffff49ba526 in QEventLoop::exec (this=0x7fffffffdde0, flags=...) at /home/kenneth/repo/Qt/qt/src/corelib/kernel/qeventloop.cpp:201 #25 0x00007ffff49bdad4 in QCoreApplication::exec () at /home/kenneth/repo/Qt/qt/src/corelib/kernel/qcoreapplication.cpp:1009 #26 0x00007ffff4fae496 in QApplication::exec () at /home/kenneth/repo/Qt/qt/src/gui/kernel/qapplication.cpp:3637
Created attachment 56928 [details] Patch
Comment on attachment 56928 [details] Patch lgtm, r+.
Comment on attachment 56928 [details] Patch Rejecting patch 56928 from commit-queue. Failed to run "['WebKitTools/Scripts/run-webkit-tests', '--no-launch-safari', '--exit-after-n-failures=1', '--ignore-tests', 'compositing', '--quiet']" exit_code: 1 Last 500 characters of output: e Compiling Java tests make: Nothing to be done for `default'. Running tests from /Users/eseidel/Projects/CommitQueue/LayoutTests Skipped list contained 'compositing/iframes/composited-iframe.html', but no file of that name could be found Testing 18298 test cases. fast/workers/storage/execute-sql-args-worker.html -> crashed Exiting early after 1 failures. 14489 tests run. 611.92s total testing time 14488 test cases (99%) succeeded 1 test case (<1%) crashed 5 test cases (<1%) had stderr output Full output: http://webkit-commit-queue.appspot.com/results/2302606
Comment on attachment 56928 [details] Patch Seems to have been hit by a flaky test.
Comment on attachment 56928 [details] Patch Clearing flags on attachment: 56928 Committed r60156: <http://trac.webkit.org/changeset/60156>
All reviewed patches have been landed. Closing bug.
Revision r60156 cherry-picked into qtwebkit-2.0 with commit 482eba3190c6d7a81d3f4b1c38ebf6354da8ad09