2010-05-25  Kenneth Rohde Christiansen  <kenneth.christiansen@openbossa.org>

Reviewed by Laszlo Gombos.

        [Qt] Running with accelerated compositing enabled sometimes result in a crash
        https://bugs.webkit.org/show_bug.cgi?id=39609

        Check if we have a scene before applying the workaround for
        the QGraphicsScene bug where opacity change doesn't always have
        immediate effect.

        * platform/graphics/qt/GraphicsLayerQt.cpp:
        (WebCore::OpacityAnimationQt::applyFrame):

Canonical link: https://commits.webkit.org/51221@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@60156 268f45cc-cd09-0410-ab3c-d52691b4dbfc