WebCore/platform/graphics/qt/GraphicsLayerQt.cpp
@@ -1361,13 +1361,14 @@ public:
         if (m_fillsForwards)
             setCurrentTime(1);
     }
+
     virtual void applyFrame(const qreal& fromValue, const qreal& toValue, qreal progress)
     {
         qreal opacity = qBound(qreal(0), fromValue + (toValue - fromValue) * progress, qreal(1));
 
         // FIXME: This is a hack, due to a probable QGraphicsScene bug.
         // Without this the opacity change doesn't always have immediate effect.
-        if (!m_layer.data()->opacity() && opacity)
+        if (m_layer.data()->scene() && !m_layer.data()->opacity() && opacity)
             m_layer.data()->scene()->update();
 
         m_layer.data()->m_layer->setOpacity(opacity);
